[tool.poetry]
name = "sp110e"
version = "1.4.2"
description = "Control SP110E BLE RGB LED device from computer"
authors = ["Pavel Roslovets <p.v.roslovets@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/roslovets/SP110E"
repository = "https://github.com/roslovets/SP110E"
keywords = ["SP110E", "RGB", "LED"]
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
bleak = ">=0.15.1"
syncer = "==1.3.0"

[tool.poetry.dev-dependencies]
python-semantic-release = "==7.31.4"
lazydocs = "*"
pydocstyle = "*"
toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
remove_dist = "false"
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
upload_to_release = "true"
upload_to_pypi = "true"
